--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "private": true,
   "sideEffects": false,
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
+    "connect:database:develop": "pscale connect adbhut_pehnava develop --port 3309"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "@remix-run/node": "^1.6.3",
     "@remix-run/react": "^1.6.3",
     "@remix-run/vercel": "^1.6.3",
     "@vercel/node": "^1.15.2",
+    "bcryptjs": "^2.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -19,14 +25,19 @@
     "@remix-run/dev": "^1.6.3",
     "@remix-run/eslint-config": "^1.6.3",
     "@remix-run/serve": "^1.6.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^18.11.9",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.2.2",
+    "esbuild-register": "^3.3.3",
     "eslint": "^8.15.0",
     "postcss": "^8.4.14",
+    "prisma": "^4.5.0",
     "tailwindcss": "^3.1.4",
-    "typescript": "^4.6.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=14"
